fix: body overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,3 +76,7 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+body:has(.body-overflow-y-hidden) {
+  overflow-y: hidden;
+}
